[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["obviousrebel <joshalex359@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "3.4.4.19"
imutils = "^0.5.3"
numpy = "^1.18.2"
opencv-contrib-python = "3.4.4.19"
pascal-voc-tools = "^0.1.29"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
